# Zweites-Gehirn

./: .gitignore  AFTER_RESTART.md  Cargo.toml  INSTALL_MANUAL.md  PHASE_2_PLAN.md  PROJECT_STATUS.md  README.md  SETUP.md  check-tools.bat  eslint.config.js  install-tools.bat  install-tools.ps1  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
.claude/: settings.local.json
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  state.rs
src-tauri/src/commands/: kanban.rs  mod.rs  tasks.rs
src-tauri/src/db/: mod.rs  models.rs  schema.rs
src-tauri/src/db/repositories/: mod.rs  task_repository.rs
src-tauri/src/services/: task_service.rs
src/lib/api/: tasks.ts
src/lib/components/kanban/: KanbanBoard.svelte  KanbanCard.svelte  KanbanColumn.svelte
src/lib/components/tasks/: QuickCapture.svelte  SubtaskList.svelte  TaskCard.svelte  TaskList.svelte
src/lib/components/ui/: DifficultyIndicator.svelte  EnergyIndicator.svelte  PriorityIndicator.svelte  ProgressBar.svelte
src/lib/stores/: tasks.ts
src/lib/types/: task.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/kanban/: +page.svelte
