[package]
name = "zweites-gehirn"
version = "0.1.0"
description = "ADHD-friendly Second Brain task management application"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"

# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }

# Database
rusqlite = { version = "0.32", features = ["bundled", "modern_sqlite"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"

# HTTP client for Claude API
reqwest = { version = "0.12", features = ["json"] }

# Utilities
tracing = "0.1"
tracing-subscriber = "0.3"
dirs = "5.0"
